--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 			content="Web site created using create-react-app"
 		/>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700&display=swap"
 			rel="stylesheet"
 		/>
 
